# noct

./: .gitignore  CMakeLists.txt  README.md
src/noct/: Environment.cpp
src/noct/interpreter/: Interpreter.cpp
src/noct/lexer/: Lexer.cpp  NoctObject.h  Token.h  TokenType.h
src/noct/module/: Module.cpp  Module.h
src/noct/parser/: Parser.cpp  Parser.h
src/noct/parser/expression/: Expression.h  LiteralStringifier.h
src/noct/parser/expression/variants/: Assign.h  This.h  UnresolvedType.h  Variable.h
src/noct/parser/statement/: Statement.h
src/noct/resolver/: Resolver.cpp
src/noct_scripts/: list.noct  script.noct
tests/: ClassesAndInstances.cpp
